# cpp_amq_docker

./: .gitignore  Dockerfile  MASTER_PROMPT.md  README.md  docker-compose.yml
consumer/: CMakeLists.txt  main.cpp
producer/: CMakeLists.txt  main.cpp
